add fable release

--- a/src/Fable.ReactTestingLibrary/Fable.ReactTestingLibrary.fsproj
+++ b/src/Fable.ReactTestingLibrary/Fable.ReactTestingLibrary.fsproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <FablePackageType>library</FablePackageType>
+    <PackageTags>fable-javascript</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Types.fs" />
@@ -21,4 +23,10 @@
     </NpmDependencies>
   </PropertyGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="Fable.Package.SDK" Version="1.3.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
