--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bugs": {
     "url": "https://github.com/Shmew/Fable.Jester/issues/new/choose"
   },
+  "type": "module",
   "license": "MIT",
   "author": "Cody Johnson",
   "repository": {
@@ -18,39 +19,44 @@
     "pretest-fc": "dotnet fable tests/Fable.FastCheck.Tests -o dist/tests/FC",
     "pretest-jest": "dotnet fable tests/Fable.Jester.Tests -o dist/tests/FJ",
     "pretest-rtl": "dotnet fable tests/Fable.ReactTestingLibrary.Tests -o dist/tests/RTL",
+    "test-watch-jest": "dotnet fable tests/Fable.Jester.Tests  -o dist/tests/FJ --watch",
+    "test-watch-rtl": "dotnet fable tests/Fable.ReactTestingLibrary.Tests -o dist/tests/RTL --watch",
     "publish-docs": "node publish.js",
     "start": "live-server --port=8080 docs/",
-    "test": "jest",
-    "test-watch": "npx nodemon -e fs,fsproj,fsi --watch tests --watch src --exec yarn test",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test-watch":  "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test-watch-html": "concurrently --kill-others \"yarn watch-html\" \"yarn test-watch\"",
     "watch-html": "live-server --port=8081 bin/jest_html_reporters.html"
   },
   "dependencies": {
-    "react": "^16",
-    "react-dom": "^16"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@babel/core": "^7",
     "@babel/plugin-transform-modules-commonjs": "^7",
     "@babel/preset-env": "^7",
-    "@sinonjs/fake-timers": "^7",
-    "@testing-library/dom": "^7",
-    "@testing-library/jest-dom": "^5",
-    "@testing-library/react": "^11",
-    "@testing-library/user-event": "^13",
-    "concurrently": "^5",
+    "@sinonjs/fake-timers": "^13",
+    "@testing-library/dom": "^10",
+    "@testing-library/jest-dom": "^6",
+    "@testing-library/react": "^16",
+    "@testing-library/user-event": "^14",
+    "concurrently": "^9",
     "core-js": "^3",
     "fast-check": "^1",
     "gh-pages": "^3",
-    "jest": "^26",
-    "jest-html-reporters": "^2",
+    "jest": "^29",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-html-reporters": "^3",
     "live-server": "^1",
-    "nodemon": "^2",
+    "nodemon": "^3",
     "npx": "^10",
-    "prettier": "^2"
+    "prettier": "^3"
   },
   "private": true,
   "jest": {
+    "transform": {},
+    "setupFilesAfterEnv": ["@testing-library/jest-dom"],
     "reporters": [
       "default",
       [
